@@ -211,6 +211,7 @@ $cdef_item_types = array(
 $tree_sort_types = array(
 	TREE_ORDERING_NONE => "Manual Ordering (No Sorting)",
 	TREE_ORDERING_ALPHABETIC => "Alphabetic Ordering",
+	TREE_ORDERING_NATURAL => "Natural Ordering",
 	TREE_ORDERING_NUMERIC => "Numeric Ordering"
 	);
 
