@@ -33,6 +33,7 @@ define("DATA_QUERY_INPUT_TYPE_PHP_SCRIPT_SERVER_QUERY", 3);
 
 define("DATA_QUERY_INDEX_SORT_TYPE_ALPHABETIC", 1);
 define("DATA_QUERY_INDEX_SORT_TYPE_NUMERIC", 2);
+define("DATA_QUERY_INDEX_SORT_TYPE_NATURAL", 3);
 
 define("DATA_QUERY_FIELD_TYPE_INPUT", 1);
 define("DATA_QUERY_FIELD_TYPE_OUTPUT", 2);
